sfSandBoxCode/force-app/main/default/objects/Employee_Benefits_Dependents__c/Employee_Benefits_Dependents__c.object-meta.xml
<CustomObject>
    <description>Employee Benefits Dependents</description>
    <label>Employee Benefits Dependents</label>
    <nameField>
        <displayFormat>EDB-{0000000}</displayFormat>
        <label>Employee Benefits Dependents Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Benefits Dependents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>