sfSandBoxCode/force-app/main/default/objects/Employee_Benefits_Dependents__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>Dependent Date of Birth</description>
    <inlineHelpText>Dependent Date of Birth</inlineHelpText>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>