sfSandBoxCode/force-app/main/default/objects/Employee_Benefits_Dependents__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary Employee</description>
    <inlineHelpText>Primary Employee</inlineHelpText>
    <label>Employee Name</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employee Benefits Dependents</relationshipLabel>
    <relationshipName>Employee_Benefits_Dependents</relationshipName>
    <type>Lookup</type>
</CustomField>