sfSandBoxCode/force-app/main/default/objects/Employee_Benefits_Dependents__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Dependent First Name</description>
    <inlineHelpText>Dependent First Name</inlineHelpText>
    <label>First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>