sfSandBoxCode/force-app/main/default/objects/Employee_Benefits_Dependents__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <description>Dependent Full Name</description>
    <formula>BLANKVALUE( First_Name__c + &#39; &#39;,&#39;&#39;) + BLANKVALUE( Middle_Name__c + &#39; &#39;,&#39;&#39;) + 
BLANKVALUE( Last_Name__c,&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Dependent Full Name</inlineHelpText>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>