sfSandBoxCode/force-app/main/default/objects/Employee_Benefits_Dependents__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Dependent Last Name</description>
    <inlineHelpText>Dependent Last Name</inlineHelpText>
    <label>Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>