sfSandBoxCode/force-app/main/default/objects/Employee_Benefits_Dependents__c/fields/Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name__c</fullName>
    <description>Dependent Middle Name</description>
    <inlineHelpText>Dependent Middle Name</inlineHelpText>
    <label>Middle Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>