sfSandBoxCode/force-app/main/default/objects/Employee_Benefits_Dependents__c/fields/Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone__c</fullName>
    <description>Dependent Phone Number</description>
    <inlineHelpText>Dependent Phone Number</inlineHelpText>
    <label>Mobile Phone</label>
    <type>Phone</type>
</CustomField>