sfSandBoxCode/force-app/main/default/objects/Employee_Benefits_Dependents__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <description>Dependent Relationship</description>
    <inlineHelpText>Dependent Relationship</inlineHelpText>
    <label>Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Domestic Partner</fullName>
            </value>
            <value>
                <fullName>Step Child</fullName>
            </value>
            <value>
                <fullName>Foster Child</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>